Corrected accent color contrast and replaced image type

--- a/style.css
+++ b/style.css
@@ -1,6 +1,10 @@
 @import url('https://fonts.googleapis.com/css2?family=Merriweather&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,500;0,700;1,500&display=swap');
 
+:root {
+    --myOrange: hsl(29, 80%, 35%);
+}
+
 * {
     margin: 0;
     padding: 0;
@@ -116,7 +120,7 @@ body {
     padding: 0.8rem 2.1rem;
     border: none;
     border-radius: 0.5rem;
-    background-color: rgb(192, 110, 34);
+    background-color: var(--myOrange);
     color: white;
     box-shadow: 0px 4px 10px lightgrey;
 }
@@ -139,7 +143,7 @@ body {
 
 .right-bottom > p > a {
     text-decoration: none;
-    color: rgb(192, 110, 34);
+    color: var(--myOrange);
 }
 
 input {
@@ -174,7 +178,7 @@ label {
     font-size: 0.9rem;
     font-family: 'Open Sans', sans-serif;
     font-weight: bold;
-    color: grey;
+    color: rgb(115, 115, 115);
 }
 
 input:not(:focus):not(:placeholder-shown):invalid {
